--- a/source/catalog.html
+++ b/source/catalog.html
@@ -44,17 +44,21 @@
         <h2 class="catalog__title">Каталог продукции</h2>
         <ul class="catalog__list product-list">
           <li class="product-list__item">
-            <picture>
-              <source type="image/webp" media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.webp 1x, img/chicken-small-desktop@2x.webp 2x">
-              <source type="image/webp" media="(min-width: 708px)" srcset="img/chicken-small-tablet@1x.webp 1x, img/chicken-small-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/chicken-small-mobile@1x.webp 1x, img/chicken-small-mobile@2x.webp 2x">
+            <a class="product-list__link" href="item-page.html">
+              <picture>
+                <source type="image/webp" media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.webp 1x, img/chicken-small-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 708px)" srcset="img/chicken-small-tablet@1x.webp 1x, img/chicken-small-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/chicken-small-mobile@1x.webp 1x, img/chicken-small-mobile@2x.webp 2x">
 
-              <source media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
-              <source media="(min-width: 708px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
-              <img class="product-list__img" width="140" height="144" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 500 г, вкус Курица">
-            </picture>
+                <source media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
+                <source media="(min-width: 708px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
+                <img class="product-list__img" width="140" height="144" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 500 г, вкус Курица">
+              </picture>
+            </a>
             <div class="product-list__wrapper">
-              <h3 class="product-list__title">Cat Energy PRO 500 г</h3>
+              <a class="product-list__link" href="item-page.html">
+                <h3 class="product-list__title">Cat Energy PRO 500 г</h3>
+              </a>
               <table class="product-list__table">
                 <tr class="product-list__row">
                   <td class="product-list__field">Объем</td>
@@ -70,20 +74,24 @@
                 </tr>
               </table>
             </div>
-            <a class="product-list__order-button" href="#">Заказать</a>
+            <a class="product-list__order-button" href="checkout.html">Заказать</a>
           </li>
           <li class="product-list__item">
-            <picture>
-              <source type="image/webp" media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.webp 1x, img/chicken-big-desktop@2x.webp 2x">
-              <source type="image/webp" media="(min-width: 708px)" srcset="img/chicken-big-tablet@1x.webp 1x, img/chicken-big-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/chicken-big-mobile@1x.webp 1x, img/chicken-big-mobile@2x.webp 2x">
+            <a class="product-list__link" href="item-page.html">
+              <picture>
+                <source type="image/webp" media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.webp 1x, img/chicken-big-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 708px)" srcset="img/chicken-big-tablet@1x.webp 1x, img/chicken-big-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/chicken-big-mobile@1x.webp 1x, img/chicken-big-mobile@2x.webp 2x">
 
-              <source media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
-              <source media="(min-width: 708px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
-              <img class="product-list__img product-list__img--big" width="140" height="144" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Курица">
-            </picture>
+                <source media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
+                <source media="(min-width: 708px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
+                <img class="product-list__img product-list__img--big" width="140" height="144" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Курица">
+              </picture>
+            </a>
             <div class="product-list__wrapper">
-              <h3 class="product-list__title">Cat Energy PRO 1000 г</h3>
+              <a class="product-list__link" href="item-page.html">
+                <h3 class="product-list__title">Cat Energy PRO 1000 г</h3>
+              </a>
               <table class="product-list__table">
                 <tr class="product-list__row">
                   <td class="product-list__field">Объем</td>
@@ -99,20 +107,24 @@
                 </tr>
               </table>
             </div>
-            <a class="product-list__order-button" href="#">Заказать</a>
+            <a class="product-list__order-button" href="checkout.html">Заказать</a>
           </li>
           <li class="product-list__item">
-            <picture>
-              <source type="image/webp" media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.webp 1x, img/fish-small-desktop@2x.webp 2x">
-              <source type="image/webp" media="(min-width: 708px)" srcset="img/fish-small-tablet@1x.webp 1x, img/fish-small-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/fish-small-mobile@1x.webp 1x, img/fish-small-mobile@2x.webp 2x">
+            <a class="product-list__link" href="item-page.html">
+              <picture>
+                <source type="image/webp" media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.webp 1x, img/fish-small-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 708px)" srcset="img/fish-small-tablet@1x.webp 1x, img/fish-small-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/fish-small-mobile@1x.webp 1x, img/fish-small-mobile@2x.webp 2x">
 
-              <source media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
-              <source media="(min-width: 708px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
-              <img class="product-list__img" width="140" height="144" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 500 г, вкус Рыба">
-            </picture>
+                <source media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
+                <source media="(min-width: 708px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
+                <img class="product-list__img" width="140" height="144" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 500 г, вкус Рыба">
+              </picture>
+            </a>
             <div class="product-list__wrapper">
-              <h3 class="product-list__title">Cat Energy PRO 500 г</h3>
+              <a class="product-list__link" href="item-page.html">
+                <h3 class="product-list__title">Cat Energy PRO 500 г</h3>
+              </a>
               <table class="product-list__table">
                 <tr class="product-list__row">
                   <td class="product-list__field">Объем</td>
@@ -128,20 +140,24 @@
                 </tr>
               </table>
             </div>
-            <a class="product-list__order-button" href="#">Заказать</a>
+            <a class="product-list__order-button" href="checkout.html">Заказать</a>
           </li>
           <li class="product-list__item">
-            <picture>
-              <source type="image/webp" media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.webp 1x, img/fish-big-desktop@2x.webp 2x">
-              <source type="image/webp" media="(min-width: 708px)" srcset="img/fish-big-tablet@1x.webp 1x, img/fish-big-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/fish-big-mobile@1x.webp 1x, img/fish-big-mobile@2x.webp 2x">
+            <a class="product-list__link" href="item-page.html">
+              <picture>
+                <source type="image/webp" media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.webp 1x, img/fish-big-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 708px)" srcset="img/fish-big-tablet@1x.webp 1x, img/fish-big-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/fish-big-mobile@1x.webp 1x, img/fish-big-mobile@2x.webp 2x">
 
-              <source media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
-              <source media="(min-width: 708px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
-              <img class="product-list__img product-list__img--big" width="140" height="144" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Рыба">
-            </picture>
+                <source media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
+                <source media="(min-width: 708px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
+                <img class="product-list__img product-list__img--big" width="140" height="144" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy PRO 1000 г, вкус Рыба">
+              </picture>
+            </a>
             <div class="product-list__wrapper">
-              <h3 class="product-list__title">Cat Energy PRO 1000 г</h3>
+              <a class="product-list__link" href="item-page.html">
+                <h3 class="product-list__title">Cat Energy PRO 1000 г</h3>
+              </a>
               <table class="product-list__table">
                 <tr class="product-list__row">
                   <td class="product-list__field">Объем</td>
@@ -157,20 +173,24 @@
                 </tr>
               </table>
             </div>
-            <a class="product-list__order-button" href="#">Заказать</a>
+            <a class="product-list__order-button" href="checkout.html">Заказать</a>
           </li>
           <li class="product-list__item">
-            <picture>
-              <source type="image/webp" media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
-              <source type="image/webp" media="(min-width: 708px)" srcset="img/buckwheat-small-tablet@1x.webp 1x, img/buckwheat-small-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/buckwheat-small-mobile@1x.webp 1x, img/buckwheat-small-mobile@2x.webp 2x">
+            <a class="product-list__link" href="item-page.html">
+              <picture>
+                <source type="image/webp" media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 708px)" srcset="img/buckwheat-small-tablet@1x.webp 1x, img/buckwheat-small-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/buckwheat-small-mobile@1x.webp 1x, img/buckwheat-small-mobile@2x.webp 2x">
 
-              <source media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
-              <source media="(min-width: 708px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
-              <img class="product-list__img" width="140" height="144" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 500 г, вкус Гречка">
-            </picture>
+                <source media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
+                <source media="(min-width: 708px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
+                <img class="product-list__img" width="140" height="144" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 500 г, вкус Гречка">
+              </picture>
+            </a>
             <div class="product-list__wrapper">
-              <h3 class="product-list__title">Cat Energy Slim 500 г</h3>
+              <a class="product-list__link" href="item-page.html">
+                <h3 class="product-list__title">Cat Energy Slim 500 г</h3>
+              </a>
               <table class="product-list__table">
                 <tr class="product-list__row">
                   <td class="product-list__field">Объем</td>
@@ -186,20 +206,24 @@
                 </tr>
               </table>
             </div>
-            <a class="product-list__order-button" href="#">Заказать</a>
+            <a class="product-list__order-button" href="checkout.html">Заказать</a>
           </li>
           <li class="product-list__item">
-            <picture>
-              <source type="image/webp" media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.webp 1x, img/buckwheat-big-desktop@2x.webp 2x">
-              <source type="image/webp" media="(min-width: 708px)" srcset="img/buckwheat-big-tablet@1x.webp 1x, img/buckwheat-big-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/buckwheat-big-mobile@1x.webp 1x, img/buckwheat-big-mobile@2x.webp 2x">
+            <a class="product-list__link" href="item-page.html">
+              <picture>
+                <source type="image/webp" media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.webp 1x, img/buckwheat-big-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 708px)" srcset="img/buckwheat-big-tablet@1x.webp 1x, img/buckwheat-big-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/buckwheat-big-mobile@1x.webp 1x, img/buckwheat-big-mobile@2x.webp 2x">
 
-              <source media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
-              <source media="(min-width: 708px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
-              <img class="product-list__img product-list__img--big" width="140" height="144" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 1000 г, вкус Гречка">
-            </picture>
+                <source media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
+                <source media="(min-width: 708px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
+                <img class="product-list__img product-list__img--big" width="140" height="144" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 1000 г, вкус Гречка">
+              </picture>
+            </a>
             <div class="product-list__wrapper">
-              <h3 class="product-list__title">Cat Energy Slim 1000 г</h3>
+              <a class="product-list__link" href="item-page.html">
+                <h3 class="product-list__title">Cat Energy Slim 1000 г</h3>
+              </a>
               <table class="product-list__table">
                 <tr class="product-list__row">
                   <td class="product-list__field">Объем</td>
@@ -215,20 +239,24 @@
                 </tr>
               </table>
             </div>
-            <a class="product-list__order-button" href="#">Заказать</a>
+            <a class="product-list__order-button" href="checkout.html">Заказать</a>
           </li>
           <li class="product-list__item">
-            <picture>
-              <source type="image/webp" media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.webp 1x, img/rice-small-desktop@2x.webp 2x">
-              <source type="image/webp" media="(min-width: 708px)" srcset="img/rice-small-tablet@1x.webp 1x, img/rice-small-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/rice-small-mobile@1x.webp 1x, img/rice-small-mobile@2x.webp 2x">
+            <a class="product-list__link" href="item-page.html">
+              <picture>
+                <source type="image/webp" media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.webp 1x, img/rice-small-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 708px)" srcset="img/rice-small-tablet@1x.webp 1x, img/rice-small-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/rice-small-mobile@1x.webp 1x, img/rice-small-mobile@2x.webp 2x">
 
-              <source media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
-              <source media="(min-width: 708px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
-              <img class="product-list__img" width="140" height="144" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 1000 г, вкус Рис">
-            </picture>
+                <source media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
+                <source media="(min-width: 708px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
+                <img class="product-list__img" width="140" height="144" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Фотография продукта Cat Energy Slim 1000 г, вкус Рис">
+              </picture>
+            </a>
             <div class="product-list__wrapper">
-              <h3 class="product-list__title">Cat Energy Slim 500 г</h3>
+              <a class="product-list__link" href="item-page.html">
+                <h3 class="product-list__title">Cat Energy Slim 500 г</h3>
+              </a>
               <table class="product-list__table">
                 <tr class="product-list__row">
                   <td class="product-list__field">Объем</td>
@@ -244,13 +272,13 @@
                 </tr>
               </table>
             </div>
-            <a class="product-list__order-button" href="#">Заказать</a>
+            <a class="product-list__order-button" href="checkout.html">Заказать</a>
           </li>
           <li class="product-list__item product-list__item--stock">
             <svg class="product-list__logo" width="30" height="30"><use xlink:href="img/sprite.svg#cross-logo"></use></svg>
             <h3 class="product-list__title">Показать еще 100500 товаров</h3>
             <p class="product-list__description">На самом деле вкусов гораздо больше!</p>
-            <a class="product-list__show-all" href="#">Показать все</a>
+            <a class="product-list__show-all" href="new-items.html">Показать все</a>
           </li>
         </ul>
       </section>
