--- a/source/index.html
+++ b/source/index.html
@@ -65,12 +65,12 @@
           <li class="categories__item">
             <h3 class="categories__title">Похудение</h3>
             <p class="categories__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="categories__button" href="catalog.html">Каталог Slim</a>
+            <a class="categories__button" href="catalog-slim.html">Каталог Slim</a>
           </li>
           <li class="categories__item">
             <h3 class="categories__title">Набор массы</h3>
             <p class="categories__description">Заработать авторитет среди дворовых котов и даже собак?Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="categories__button" href="catalog.html">Каталог pro</a>
+            <a class="categories__button" href="catalog-pro.html">Каталог pro</a>
           </li>
         </ul>
       </section>
