--- a/source/form.html
+++ b/source/form.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <title>HTML Academy: Подбор программы от Кэт энерджи</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="css/style.min.css" rel="stylesheet">
-    <link href="css/normalize.css" rel="stylesheet">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="preload" href="fonts/oswaldregular.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/normalize.css">
 
     <script>
       document.createElement( "picture" );
@@ -160,33 +163,28 @@
 
         <ul class="page-footer__social social">
           <li class="social__item">
-            <a class="social__link" href="#">
-              <span class="visually-hidden">Мы во Вконтакте</span>
+            <a class="social__link" href="#" aria-label="Мы во Вконтакте">
               <svg class="social__icon social__icon--vk" width="22" height="12"><use xlink:href="img/sprite.svg#icon-vk"></use></svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link" href="#">
-              <span class="visually-hidden">Мы в Инстаграме</span>
+            <a class="social__link" href="#" aria-label="Мы в Инстаграме">
               <svg class="social__icon social__icon--instagram" width="16" height="16"><use xlink:href="img/sprite.svg#icon-insta"></use></svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link" href="#">
-              <span class="visually-hidden">Мы в Фейсбуке</span>
+            <a class="social__link" href="#" aria-label="Мы в Фейсбуке">
               <svg class="social__icon social__icon--facebook" width="10" height="19"><use xlink:href="img/sprite.svg#icon-fb"></use></svg>
             </a>
           </li>
         </ul>
 
-        <div class="page-footer__copyright copyright">
-          <a class="copyright__link" href="https://up.htmlacademy.ru/adaptive/18">
-            <span class="copyright__text">HTML Academy</span>
-            <svg class="copyright__icon" width="41" height="52"><use xlink:href="img/sprite.svg#icon-htmlacademy"></use></svg>
-          </a>
-        </div>
+        <a class="copyright__link" href="https://up.htmlacademy.ru/adaptive/18">
+          <span class="copyright__text">HTML Academy</span>
+          <svg class="copyright__icon" width="41" height="52"><use xlink:href="img/sprite.svg#icon-htmlacademy"></use></svg>
+        </a>
       </div>
     </footer>
-    <script src="js/main-nav.js"></script>
+    <script src="js/main-nav.min.js"></script>
   </body>
 </html>
